--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -101,7 +101,9 @@ a ton of music. Also, in the fall I moved to Rochester, NY and had access to
 much more live music and four fantastic record stores. It was at one of these,
 Lakeshore Record Exchange, that I would buy many of the last CDs in my
 collection. This is the last year that CDs will appear in significant number in
-my photo of favorites.
+my photo of favorites. This was the most involved photo in this whole project to
+create. I put a record in there by accident that isn't among my favorites, can
+you spot it? I'm certainly not going to go through the process of making it again!
 
 .. image:: images/2009.jpg
   :width: 900
@@ -172,9 +174,107 @@ my photo of favorites.
   world music, chamber pop this guy is generally making, but with a huge brass
   band. The second is delightful, early 90s techno. The combination works great
   together somehow. [*Memory*: These guys embody the 2000s more than anyone. I
-  had to pick them for the banner on this page.]
+  had to pick a performance by them from Pitchfork 2009 for the banner on this page.]
 
+- *Susan Storm's Ugly Sister and Other Saints and Superheroes* by **Rachel
+  Taylor Brown** - Such a cool concept for an album that is done mostly really
+  well. Less famous (mostly imaginary, and quite troubled) comic book
+  characters, and religious myths (The original superheroes). [*Memory*: I don't
+  know if this is true or not, but I remember this CD as the first thing I ever
+  ordered online and had delivered to my new home of Rochester.]
 
+- *The Hazards of Love* by **The Decemberists** - This band had been heading
+  down a road of fairy tales and prog rock that peaked with with release. Some
+  great vocal contributions from Shara Nova of **My Brightest Diamond**. I wish
+  it was a little shorter, and would probably come back to it more if it had
+  been trimmed down a bit. [*Memory*: There was an amazing full performance
+  video of this on YouTube back in the day, I really wish that was still
+  available.] 
+  
+- *Bitte Orca* by **Dirty Projectors** - I don't know that a band has ever done
+  more with less technical proficiency (outside of punk music anyway). I don't
+  think this record is as intentionally arty as the reviews would have you
+  believe. This is a band stretching their skills way beyond the advisible. So
+  charmingly amateurish, and somehow it adds up to way more than its individual
+  parts. Everyone in this band had a completely untrained voice, and it all
+  works.[*Memory*: I was very resistent to this record at first given how rough
+  around the edges it is, and how much Pitchfork was pushing it.]
 
+- *The Duckworth Lewis Method* by **The Duckworth Lewis Method** - A very late
+  addition that I discovered more than a decade after release. Amazing in the
+  way **The Divine Comedy** always is, but with a sense of whimsey that could
+  only be produced by a concept album about the sport of cricket. I don't
+  understand all the references here, but the examination of Britain's falling
+  stature in the game, as an analogy for larger world issues is hard to miss.
+  [*Memory*: I listened to this album more than any other in the year of 2021,
+  and it even inspired me to research, and learn the rules and strategy of
+  cricket so I could understand it better.]
 
+- *Tarot Sport* by **Fuck Buttons** - I think they tried to come up with a new
+  genre name for this kind of thing, but looking back it just fits on the
+  electronic branch of the post rock tree. Such positive high energy music, I
+  used to put this on the end of running playlists to get me home from long
+  runs. [*Memory*: This is the first new release that I really had to extend
+  effort to get on vinyl. I imported a copy from Amazon UK.]
+
+- *Con Law* by **Generationals** - Remembering back to this era I think of two
+  things: Chillwave, and this kind of straightforward, dance-able pop music.
+  This first record has a rawness to it that would be sanded off in their later,
+  more big-budget releases. They work better in this lower fidelity format.
+  [*Memory*: One of the many great bands I saw play to a mostly empty room at
+  Bugjar. Those who were there had a great time bopping around to these guys.]
+
+- *Album* by **Girls** - One of my favorite bands of all time, and I pretty much
+  love everything they did in their short career. My favorite will always be
+  this collection of stunning pop songs. "Hellhole Ratrace" is a remarkable
+  story of refusing to give up, and learning to go it alone when there is no one
+  else to lean on. [*Memory*: I'm so glad I was able to catch these guys at
+  Pitchfork 2010, as they would break up not long after.]
  
+- *Veckatimest* by **Grizzly Bear** - This was my point of entry for this band.
+  There first couple records didn't connect with me, but there was something
+  about the more tightly constructed songs on this album that made me appreciate
+  their psych folk sound way more. I can't think of a group with a more
+  distinctive sound, and every record since this one has had a very similar
+  feel, but I'm not anywhere close to being tired of it. [*Memory*: On one of my
+  first extended business trips to Rochester, I remember brining along my newly
+  purchased CD of this one. I remember for some reason I was assigned a full
+  size pickup as my rental car. I also remember how amazing "Two Weeks" sounded
+  the first time I heard it while pulling into the East Henrietta Country Inn
+  and Suites.]
+
+- *Here We Go Magic* by **Here We Go Magic** - If you were to strip **Grizzly
+  Bear** back to the bare essentials, you would have something like this record.
+  The next album, by the full band version of this act would blow this away, but
+  there is some real magic in songs like "Fangela". [*Memory*: When I saw this
+  band in 2010 I bought a shirt with the cover of this album on it. It had a
+  hold in the sleeve, and I never wore it.]
+
+- *Seek Magic* by **Memory Tapes** - This guy always hated being lumped in with
+  the Chillwave bands. I can kind of understand why, as this is built from
+  mostly very different parts. That said, the highly melodic and psychedelic
+  sounds on offer here invoke the same sort of painful nostalgia for a 1980s
+  that never existed. "Plain Material" is one of my all time favorite songs, and
+  it is hard to hear it without seeing a crowd of wayfarer wearing hipsters
+  bopping around in Union Park, Chicago. [*Memory*: At Pitchfork 2009, this
+  record was for sale at the same amazing booth that had the Minimal Wave
+  compilations. I passed on it, and regretted it for almost a decade. I was
+  eventually able to get a vinyl reissue of this one.]
+
+- *No More Stories...* by **Mew** - [**2009 FAVORITE**] - Only Scandinavians can
+  make this kind of music. So warm and comfy, such catchy pop songs. This isn't
+  chillwave, but it is making clear references to same imagined version of the
+  1980s. [*Memory*: I wish I knew how much I liked this band so I went to see
+  them at Pitchfork 2009 on the B stage.]
+
+- *Wind's Poem* by **Mount Eerie** - Such a heavy, beautiful record. I love how
+  it hides all those melodies in that sea of noise. Needs to be listened to at
+  high volume full the full impact. [*Memory*: I didn't full appreciate this
+  record until I listened to it on a night drive at high volume, from beginning
+  to end. The way this should be experienced]
+
+- *The Life of the World to Come* by **Mountain Goats** - For some reason this
+  record separates itself from the dozens of others from this guy. It is the
+  same kind of self-produced indie folk/punk, but somehow by far my favorite.
+  [*Memory*: I liked this record going in, but I loved this record after seeing
+  a screening of a performance film of the whole record at Noise Pop 2010.]
