--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -209,7 +209,7 @@ Compiling my favorites here as they happen.
   seen in the prior records, with some interesting new elements and instruments.
   "Linda & Stuart" reminds me of Owen Pallett in a very favorable way. The title
   track feels like Gabe's take on the Sufjan formula, and it really works out.
-  [*Memory: I heard this record for the first time on vinyl, and I listened to
+  [*Memory*: I heard this record for the first time on vinyl, and I listened to
   it three times in a row.]
 
 - *Ghost Song* by **Cecile McLorin Salvant** - I generally don't like vocal
