--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -261,6 +261,13 @@ you spot it? I'm certainly not going to go through the process of making it agai
   compilations. I passed on it, and regretted it for almost a decade. I was
   eventually able to get a vinyl reissue of this one.]
 
+- *Fantasies* by **Metric** - The last great album by one of the great Canadian
+  indie bands, in the year that the Canadian renaissance started to wrap up. I
+  know they are still out there making music, but this is where it all starts
+  sounding the same to me. [*Memory*: This is one of the very first CDs that I
+  bought at Lakeshore Record Exchange, the alternative record store a two blocks 
+  walk from my new apartment in Rochester, NY.]
+
 - *No More Stories...* by **Mew** - [**2009 FAVORITE**] - Only Scandinavians can
   make this kind of music. So warm and comfy, such catchy pop songs. This isn't
   chillwave, but it is making clear references to same imagined version of the
@@ -278,3 +285,102 @@ you spot it? I'm certainly not going to go through the process of making it agai
   same kind of self-produced indie folk/punk, but somehow by far my favorite.
   [*Memory*: I liked this record going in, but I loved this record after seeing
   a screening of a performance film of the whole record at Noise Pop 2010.]
+
+- *The Resistance* by **Muse** - I always heard **Queen** when I listened to
+  these guys in a way that other folks did not seem to hear. Well after this
+  album I think I wasn't the only one. Very over the top, and an exceptional
+  hard rock album. [*Memory*: I saw them on the tour for this record in Toronto
+  with some work friends.]
+
+- *Psychic Chasms* by **Neon Indian** - This is probably the definitive
+  Chillwave record and "Deadbeat Summer" the definitive song in the genre. It
+  also illustrates how the low budget production values were an essential part
+  of the formula. His later, more refined records just don't hold up to this
+  fuzzy, messy masterpiece. [*Memory*: I don't know that any record makes me
+  think of my tiny, dingy Park Avenue apartment than this one. I listened to
+  this a lot back in those days.]
+
+- *The Pains of Being Pure atHeart* by **The Pains of Being Pure at Heart** -
+  There was a massive "Pitchfork backlash" against this one since the site
+  seemed to be way more into this than most. That said, they were absolutely
+  right, and this kind pop/rock is timeless. I think everyone expected some kind
+  of C86 revival, but this is really the only major artifact we got out of it.
+  [*Memory*: At the Pitchfork music festival in 2009 I had just heard **The
+  Antlers** play on the B stage and I was walking over to the main stages, and I
+  heard these guys playing "Stay Alive". I spontaneously starting twirling
+  around in a circle as I walked. It was the last time I ever felt young.]
+
+- *You Can Have What You Want* by **Papercuts** - A fuzzy kind of psychedelic
+  music that was compatible with, but not directly related to the prevailing
+  trends of the time. A great album throughout, but "The Machine WIll Tell Us
+  So" is one of my songs of the decade. This record almost fits better in 1999
+  than 2009 and it sounds timeless today. [*Memory*: I discovered this band
+  opening for *Camera Obscura* at the German House in the Rochester South Wedge.
+  I was nervous to walk through an unfamiliar neighborhood carrying my new copy
+  of their LP. I now own a house in that very neighborhood.]
+
+- *Real Estate* by **Real Estate** - Making this list it is clear how this was
+  the peak of fuzzy psychedelic music. These guys are making really pleasant
+  jangly pop, with the fuzz dial turned up to 11. [*Memory*: I didn't get into
+  this band until I saw them at a Pitchfork after-show in 2011. I was there to
+  see Dent May, but these guys were super impressive live.]
+
+- *Junior* by **Röyksopp** - It was tough to pick a favorite for this year, as I
+  was split between the one I picked and this stellar record. Interestingly, I
+  didn't even put this on my list of favorite albums I made at the time! I was
+  already into this band by 2009, and their ambient classic *Melody AM* was a favorite.
+  This album was a shock, as they had transformed into some sort of Scandinavian
+  **Daft Punk**. This is stunning electro-pop record, and I wish we had gotten
+  more like it. [*Memory*: I held a vinyl copy of this in my hands once. I
+  didn't understand how great it was then. I greatly regret not buying it.]
+
+- *Small Black EP* by **Small Black** - Another of the cornerstones of
+  Chillwave, this has a timeless sound that has aged really well. "Weird
+  Machines" is probably my favorite track from the whole genre. These guys did
+  survive the transition to more refined production values pretty well, but I
+  still prefer the fuzzy, heavily clipped sound of this record. You can't keep
+  making this kind of music forever though. [*Memory*: I saw these guys at
+  BugJar some random weeknight and remember being disappointed by how bro-ish
+  these guys looked in their athleisure gear and ball caps.]
+
+- *Actor* by **St. Vincent** - A refinement of the sound from her first record,
+  and by far my favorite release by the artist. Eccentric bedroom pop with a
+  sharp rock edge, made without any notion of stardom or awareness of mass
+  popularity. Things would change after this record, in ways I did not care for.
+  [*Memory*: I saw her at Noise Pop 2009 (Great American Music Hall) right
+  before this came out. It was an outstanding show, and how I will always prefer
+  to remember the artist.]
+
+- *Suckers EP* by **Suckers** - I'm not exactly sure how to describe this genre,
+  but it falls in the same space as bands like **Yeasayer** or **Menomena**.
+  Highly percussive, with meandering instrumental passages, and serious music
+  that isn't afraid to be very fun. They didn't last long, but what they made
+  was great. [*Memory*: One of the last conversations I had with Greg at City
+  Lights Records (State College, PA) was about this record. He knew I was very
+  into **MGMT** and **Menomena** and he asked if I had heard the other band on
+  the big summer tour (these guys). He spun his CD-R of the EP for me.]
+
+- *The BQE* by **Sufjan Stevens** - Mark this down as one of those records I
+  like way more than almost anyone else. An amazing film soundtrack that borders
+  on Contemporary Classical, and Sufjan pushing his middle period sound to its
+  fullest extreme. This was also gave a preview of the electronic sounds that
+  were to come. [*Memory*: I bought this (with a wad of other releases) at
+  Lakeshore Record Exchange and listened to them repeatedly as I taught myself
+  how to wax my cross-country skiis in the basement lab at my work.]
+
+- *The XX* by **The XX** - A minimalist rock record that was wildly popular at
+  the time and that you hear little about today. My personal relationship has a
+  similar arc to it. One of my very favorites at the time, but something I
+  rarely find myself returning to today. Minimalism is tough. If what little is
+  there doesn't have a lot of depth to it, it gets old quick. That said, I have
+  to include it, even if my time with it was brief but intense. [*Memory*:
+  Hipster Runoff loved to make fun of this record. Carles always had a good
+  understanding of what hype records were going to fade a bit over time.]
+
+- *Spirit Animal* by **Zombi** - It was strange to hear this kind of
+  instrumental prog rock in the 21st century. It not only exists, but is
+  excellent, especially the epic title track. [*Memory*: I discovered this
+  album when it was played before a **Dungen** show at Mohawk Place in Buffalo,
+  NY. I used the Shazaam music matching service to find it, and immediately
+  downloaded from eMusic. I was pleasantly surprized to see these guys play a
+  great opening set for **Ghost** half a decade later.]
