--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -18,7 +18,7 @@ Coming Soon
 
 *Section complete*: TBD
 
-*Latest update*: 5 Dec 2021
+*Latest update*: 30 Jul 2022
 
 *Total Albums*: TBD
 
@@ -194,7 +194,7 @@ you spot it? I'm certainly not going to go through the process of making it agai
 - *Bitte Orca* by **Dirty Projectors** - I don't know that a band has ever done
   more with less technical proficiency (outside of punk music anyway). I don't
   think this record is as intentionally arty as the reviews would have you
-  believe. This is a band stretching their skills way beyond the advisible. So
+  believe. This is a band stretching their skills way beyond the advisable. So
   charmingly amateurish, and somehow it adds up to way more than its individual
   parts. Everyone in this band had a completely untrained voice, and it all
   works.[*Memory*: I was very resistent to this record at first given how rough
