--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -76,7 +76,7 @@ albums by artists I already know well.
 This is the first year that was compiled with this project in progress, and in
 mind. How did this impact my listening? The impact is subtle, but I'm sensing an
 effort to branch out and hear new things (that aren't just random things I'm
-hearing on NPR). By this time 2021 ended, I had been working from home for
+hearing on NPR). By the time 2021 ended, I had been working from home for
 almost two years. I'm also seeing the kind of introspective music that fit in
 well with that kind of isolation. I also feel the effect the pandemic on a sense
 of isolation and self reflection in many of the records I was listening to.
