small fixes to 2022

--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -100,7 +100,9 @@ of isolation and self reflection in many of the records I was listening to.
 
 - *Ocean to Ocean* by **Tori Amos** - Another really strong record, from an
   artist who keeps making them. Probably not as good as *Native Invader* but the
-  song "Spies" is her best in a decade or more.
+  song "Spies" is her best in a decade or more. [*Memory*: Tori came to
+  Rochester for the first time in about 20 years on this tour and played a great
+  show to a very engaged audience.]
 
 - *Cavalcade* by **Black Midi** - My favorite artist discovery in some years.
   (More than a decade maybe?). Some serious prog/math rock made with an indie spirit.
@@ -109,13 +111,6 @@ of isolation and self reflection in many of the records I was listening to.
   website to talk about them. [*Memory*: buying the LP online before I had even
   heard half the album because I was so taken]
 
-- *Chemtrails Over the Country Club* by **Lana Del Rey** - *NFR* wasn't a fluke,
-  but the beginning of a career on a whole new level. This is another extraordinary
-  album filled with the old Lana tricks and a killer folk soul. The songwriting
-  is top notch, and the performances are first rate. My favorite artist working
-  today. [*Memory*: It had been about five years since I had heard an album on
-  vinyl for my first listen, and I was glad I saved this one]
-
 - *Jubilee* by **Japanese Breakfast** - We are now getting to the point where
   music is starting to sound like a retro throwback to the indie music I
   listened to in my college days. This is the kind of semi-twee indie pop that I
@@ -123,6 +118,13 @@ of isolation and self reflection in many of the records I was listening to.
   [*Memory*: Around this time, It felt like every time Spotify radio took over
   after the music I actually chose to play, it played me the song "Paprika". Did
   this make me like the album by brute force?]
+
+- *Chemtrails Over the Country Club* by **Lana Del Rey** - *NFR* wasn't a fluke,
+  but the beginning of a career on a whole new level. This is another extraordinary
+  album filled with the old Lana tricks and a killer folk soul. The songwriting
+  is top notch, and the performances are first rate. My favorite artist working
+  today. [*Memory*: It had been about five years since I had heard an album on
+  vinyl for my first listen, and I was glad I saved this one]
 
 - *Blue Banisters* by **Lana Del Rey** - How is this even better than her first
   album from 2021. How is she the most consistent artist of the current
