2022 project update, started 2008

--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -18,7 +18,7 @@ Coming Soon
 
 *Section complete*: TBD
 
-*Latest update*: 30 Jul 2022
+*Latest update*: 05 Aug 2022
 
 *Total Albums*: TBD
 
@@ -33,6 +33,91 @@ TBD
 *Favorite Song*:
 
 TBD
+
+2008
+----
+
+When I look at my favorites I am struck by two things. First, almost the entire
+list is comprised of fairly new (at the time) indie acts, with only two "legacy"
+artists in **Portishead** and **Steven Wilson** (who was himself a newly minted
+solo artist after the end of **Porcupine Tree**). The second thing I notice is
+how almost all of these were discovered as they came out and represent what I
+was actually listening to in 2008. Only the **Metronomy** and **William
+Brittelle** records were retrospective discoveries, and only by a year or two
+each. It almost seems like this is the most aligned I would be with what was
+hot and "now". This year also has the distinction of being the fist time I
+bought new albums on vinyl before I heard them in any other format. The other
+interesting note about formats is that I own no less than 11 of the albums below
+on both vinyl and CD. Unwilling to fully commit to the vinyl revival I was often
+getting new music on the small discs and making the upgrade when something
+became a favorite.
+
+.. image:: images/2008.jpg
+  :width: 900
+  :alt: My 2008 favorite albums
+
+.. raw:: html
+
+  <iframe style="border-radius:12px" 
+  src="https://open.spotify.com/embed/playlist/1kaeZR79MxCVk3u5szQcPY?utm_source=generator&theme=0" 
+  width="100%" height="380" frameBorder="0" allowfullscreen="" 
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+- *Devotion* by **Beach House** - The second (and final) record in their
+  original sound before moving to far bigger and more popular sonic territory. I
+  do prefer what they would become, but there is a lot to love on these much
+  smaller, and more acoustic early songs. They would keep going upwards from
+  here, but they were always great. [*Memory*: I saw them on this album cycle
+  playing a twin headline show with **The Walkmen** at the TLA in Philadelphia.
+  I had a nice chat with Vicky Legrand at the merch booth and shared the memory
+  of their issues at their first London show in 2007. She smiled and almost
+  yelled: "You saw the worst show ever!" I bought of copy the "Used to Be"
+  single as a 45 and when I got home from the 3 hour drive, I listened to the
+  sound of what was to come.]
+
+- *William Brittelle* by **Mohair Timewarp** - My point of entry would be his
+  concept 2010 concept album, but I would circle back to this weird art rock
+  record not long after. A very strange album with extremely strange lyrics. I
+  really wish New Amsterdam was releasing music like this. [*Memory*: This
+  might end up being the last CD I ever buy. I realized it was one of the few
+  albums I didn't own in any format and it wasn't streaming. So I bought a CD
+  copy in early 2022.]
+
+- *Half Hours with the Lower Creatures* by **Rachel Taylor Brown** - I'm fairly
+  certain 99% of the folks who know about this artist, were introduced via the
+  appearance of "Stagg Field" on NPR's "All Songs Considered". I'm not a huge
+  fan of the show, but I really have to credit those guys for shining a light on
+  some very non-commercial music by an obscure artist who would otherwise get no
+  attention. A terrific art rock album. [*Memory*: After hearing this amazing
+  record and the follow up in 2009 that I liked even more, I ordered her entire
+  back catalog from CD Baby. The rest wasn't that great.]
+
+- *Missiles* by **The Dears** - Another great Canadian husband/wife band (why
+  are there so many of these?). If **The Arcade Fire** are too subtle for you,
+  you can count on these guys. Super over the top, dramatic rock that manages to
+  be both kinda stupid and very beautiful. [*Memory*: Around this time I was
+  listening to the XM Canadian indie channel called "The Verge" where I
+  discovered this band and many other favorites.]
+
+- *Offend Maggie* by **Deerhoof** - Simultaneously one of the heavier and
+  quieter albums by one of the most unique acts to come out of millennial indie.
+  [*Memory*: I regretted buying this on vinyl at the time, which feels odd to me
+  now. It also happens to be one of the more valuable albums I own now.]
+
+- *Microcastle* by **Deerhunter** - This is where the formula came together. All
+  the great psychedelic atmospherics were still there, but now we had moments of
+  supreme pop songwriting spread throughout. [*Memory*: I was always very
+  skeptical of Pitchfork, but man they were right to champion this amazing
+  record.]
+
+- *In Ear Park* by **Department of Eagles** - One of those records I like way
+  more than almost everyone else. I still like this slightly more than any of
+  the albums by Dan Rosen's main band, **Grizzly Bear**. I've always been a
+  sucker for this kind of fuzzy, layered production, and the spare piano based
+  arrangements really work for this kind of music. [*Memory*: For some reason
+  this became a favorite album to listen to while I ran around this time.
+  Totally inappropriate to task, this was the soundtrack to many laps around the
+  Penn State IM building track.] 
 
 2009
 ----
