--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -92,6 +92,15 @@ became a favorite.
   record and the follow up in 2009 that I liked even more, I ordered her entire
   back catalog from CD Baby. The rest wasn't that great.]
 
+- *In Ghost Colours* by **Cut Copy** - There were a bunch of bands that were
+  making music that referenced an imaginary version of the 80s that never really
+  existed, and then there were these guys. This is a wonderful modernization of
+  **New Order** or **OMD** for the home recording era. [*Memory*: I totally held
+  a vinyl copy of this in my hand at the Pitchfork music festival in 2009. I
+  didn't realize how few of them they made, and that it would never get a
+  re-issue. This kind of thing would go out of style, and I assume it will never
+  be repressed.]
+
 - *Missiles* by **The Dears** - Another great Canadian husband/wife band (why
   are there so many of these?). If **The Arcade Fire** are too subtle for you,
   you can count on these guys. Super over the top, dramatic rock that manages to
@@ -117,7 +126,96 @@ became a favorite.
   arrangements really work for this kind of music. [*Memory*: For some reason
   this became a favorite album to listen to while I ran around this time.
   Totally inappropriate to task, this was the soundtrack to many laps around the
-  Penn State IM building track.] 
+  Penn State IM building track.]
+
+- *The Barbarians Move In* by **Duels** - A massive change-up after the UK Indie
+  pop of the first record. A moody post-punk record, with moments of orchestral
+  rock pomp. The title song is a striking, dirge-like record that makes me
+  wonder what happened to these guys between releases [*Memory*: I didn't
+  realize until the end of the year that this had come out. There were a few
+  reviews on Amazon where folks were calling this a lost classic. They were right.] 
+
+- *4* by **Dungen** - A return to the softer, more melodic side of things.
+  Doesn't feature the flute like what came before and after, but still gorgeous
+  stuff. [*Melody*: This was around the time the English language imitators
+  **Tame Impala** appeared. It really bummed me out that this album was
+  overshadowed by second class copycats.]
+
+- *The Seldom Seen Kid* by **Elbow** - The biggest band to come out of 2000s UK
+  Indie. They came up with a sound that combined the best points of **Blur**
+  style Britpop and classic **Peter Gabriel** style Art Rock. This was the album
+  after which they became too big to be Indie any longer. [*Memory*: When this
+  album first was getting press, I dismissed it as the next **Coldplay** but I'm
+  glad they proved me wrong.]
+
+- *Sleep Well* by **Electric President** - This was the last record that I really
+  enjoyed from the minimalist electro-indie pop that was big in the first decade
+  of the millennium. Some really great shoegazey post-rocky guitar in this one
+  that added a new texture to their sound. A very mellow record with a calm vibe
+  that I really enjoy. [*Memory*: This reminds me of the walks that I would take
+  during lunch break from work, listening to my latest music acquisitions on my
+  old school Sansa 200 MP3 player. This was a nice calm record to put on in the
+  middle of stressful day at a startup company.]
+
+- *The Midnight Organ Fight* by **Frightened Rabbit** - The most Scottish of the
+  Scottish bands. Such a wonderful folk-punk band with enough UK Indie bombast
+  to make a big sound without going over the top. They would never match this
+  again, but most bands never make one almost this amazing. [*Memory*: I liked
+  this record the first time I heard it, but I didn't really connect with it
+  until a trip to LA in late 2008. This was a difficult trip for me, as I
+  realized I was growing apart from the group of friends I was traveling with. I
+  took the MetroLink train into the city solo to have a look around, and this
+  was the soundtrack to my visit.]
+
+- *Into Your Lungs...* by **Hey Rosetta!** - This year was probably the peak of
+  Canadian Indie and this was one of the most representative records of the
+  scene. So big (but unpretentious), so elegantly produced (but still quaintly
+  charming), a remarkable record. Americans can't make music this kind of music
+  without sounding like cheeseballs. [*Memory*: This was another record that got
+  a ton of play on XM The Verge. Canadian Indie was where it was at in 2008.]
+
+- *Made in the Dark* by **Hot Chip** - The start of a more "serious" turn from
+  these guys. This still is slightly goofy dance-pop, but the humor was no
+  longer the focus. Still charmingly self-recorded, but the more straight ahead
+  themes makes for a more long lasting impact. [*Memory*: I forever get this
+  mixed up with the record that would come next (they are both great!) I even
+  included this record in the image for both years.]
+
+- *Feed the Animals* by **Girl Talk** - One of the last great outcomes of pop
+  music's post modern era. It was also one of the most notable "pay what you
+  want" downloads in the post-MP3 era. His best attempt at merging the classic
+  rock and hip-hop eras. [*Memory*: Another running playlist regular for me.
+  Hard to hear this without thinking about turning laps at Tudek Park in State
+  College, PA.]
+
+- *Couples* by **The Long Blondes** - One of the most unjustifiably ignored
+  follow up records out there. Just as good as their much loved debut, this
+  record probably mostly suffered from a lack of promotion and tour support. My
+  favorite band from the pop side of the post punk revival, this band blows away
+  **The Yeah, Yeah, Yeahs** in my opinion. It is very sad this would be the end.
+  [*Memory*: I was amazed to buy an unopened back-stock original pressing of
+  this in 2021, 13 years after release (on Amazon of all places!).]
+
+- *Saturdays = Youth* by **M83** - Looking back, it almost seems like this
+  record is the genesis of the entire "imagined 80s" aesthetic that would
+  predominate a wide swath of the indie over the next 3-4 years. The chillwave,
+  the vaporwave, the other acts that seemed to be imitating a kind of 80s pop
+  music that never actually quite existed. Look at that cover, and its
+  characters from not quite a John Hughes film. It isn't actually that different
+  from what this band had done in the record that preceded it, but it just found
+  a focus that anticipated what was to come. [*Memory*: It is hard to think of
+  this record without thinking of Hipster Runoff. Our boy Carles also understood
+  how important this sound would be to the future direction of indie.]
+
+- *Rabbit Habits* by **Man Man** - This album feels like a straight up
+  modernization of the **Captain Beefheart** formula. It is a complete anomaly
+  in the indie scene of the day that works really well. [*Memory*: This is the
+  last show I would ever see at the State Theater in State College, PA. A great
+  venue that would bring a kind of indie show to the town for a short window in
+  the last years of the aughts. They didn't have a liquor license at the time,
+  but had a great coffee shop. I was so hyped up on caffeine for the show, and
+  that was the right state for this music. The headliner was **Cursive**, who
+  were awful, and I left after one song.]
 
 2009
 ----
