--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -217,6 +217,109 @@ became a favorite.
   that was the right state for this music. The headliner was **Cursive**, who
   were awful, and I left after one song.]
 
+- *Nights Out* by **Metronomy** - Unlike most people, I prefer the more poppy
+  records to come, but I like this as well. Much like **Hot Chip**, this band
+  knows exactly where to find the line between joke band and serious music.
+  [*Memory*: I was first attracted to this album by the amazing cover with the
+  painting of the guy proudly in front of the first generation Honda Insight.]
+
+- *Oracular Spectacular* by **MGMT** - No band or album exemplifies the
+  "mainstreaming of indie" more than what we have here. It deserved to be the
+  thing that broke indie to the general public. Fun but smart electronic pop
+  music, the kind of thing that appeals to teenagers and music collecting forty
+  year olds in equal measure. This is the least weird record this group is
+  likely to ever make, and likely the beginning and the end of any wide cultural
+  significance. [*Memory*: These guys have always been a major label act, but it
+  was the indie music fans who discovered them first. It was shocking to see a
+  band like this get such massive attention, but in retrospect the whole thing
+  felt calculated by Columbia. The birth of Mindie Rock.]
+
+- *A Thousand Shark's Teeth* by **My Brightest Diamond** - A transitionary
+  record between the guitar centered songs she started with, and the very fancy
+  chamber pop that was coming next. One of the greatest voices in indie, who
+  often doesn't get enough credit for the range and quality of her songwriting.
+  I do miss the occasional heaviness she worked into the first two records.
+  [*Memory*: The first time I saw Shara live was at Bugjar in 2011, when she was
+  still in the guitar focussed configuration of this album cycle. It was quietist
+  I have ever seen an audience be while an artist performed at that venue.]
+
+- *Skeletal Lamping* by **Of Montreal** - My opinions of this record have
+  evolved significantly over time: starting at disappointing mess, to flawed but
+  partially listenable, and today as possibly the best record by one of my
+  favorite acts from these days. This collection of micro-songs really needs to
+  be listened to all at once. It is also best not to spend too much time
+  thinking about the often cringeworthy lyrics, and instead focus on how
+  interesting it all sounds. [*Memory*: When this came out, I really thought
+  that fame had gone to Kevin Barnes head, and ruined him. It turns out fame did
+  go to his head, and created something wonderfully over the top.]
+
+- *Third* by **Portishead** - [**2008 Favorite**] - It seems like this is going
+  to be the last album by this legendary band, and I'm happy with this being
+  their final and most important statement. There is no other album like this,
+  and it arrived as wholely unique in music history. This haunting,
+  uncomfortably minimalist electronic music only makes sense when listened to in
+  a dark room. The way they deconstruct their own signature sound on "Machine
+  Gun" is one of the most unique things a band has ever done. A top 5 favorite
+  of mine forever. [*Memory*: This album made it painfully clear to me how bad
+  the state of vinyl production was at the time. I bought three copies of it,
+  until I was able to assemble a single reasonable copy from discs extracted
+  from two different instances of the album.]
+
+- *Rook* by **Shearwater** - Such a beautiful voice, and so much instrumental
+  talent in this band. That said, this is the only one of their records that
+  doesn't bore me to tears. The significant use of the classic emo quiet/loud
+  dynamic is what does it for me I guess. [*Memory*: This was the vinyl album
+  that made me realize how good things could be when you got a good pressing.
+  For some reason, I was able to get this for like 5 bucks on Overstock.com. It
+  was an impulse buy that inspired me to buy my first proper Turntable. I can
+  remember clearly hearing the crisp, surface noise free sounds in my tiny
+  upstairs room in the Woodycest apartment I shared at the time. I had the
+  record on the Technics SL-1200 I still use, and probably will use for the rest
+  of my life.]
+
+- *At War With Walls & Mazes* by **Son Lux** - One of those acts that owes their
+  career and fame to NPR music. This nerdy electo-hip hop is the kind of thing
+  that is ready made for Public Radio. I prefer the proggy sounds that would
+  come later with the full band incarnation, but this early recording still has
+  much of the sounds that would be perfected in later work. [*Memory*: This
+  record holds the distinction of being the first I owned and discovered
+  exclusively on the vinyl format.]
+
+- *Soft Airplane* by **Chad Vangaalen** - The weirdest folk rock record I have
+  ever heard, and one of the best. The lyrics and music are both completely off
+  the wall. I don't feel that he has ever reached these heights again as an
+  artist, and it seems like his best effort went into his production of other
+  artists from here on out. [*Memory*: Hearing the classic Casio drum machine
+  sounds on "TMNT Mask" really took me back to the old SK-1 days.]
+
+- *You & Me* by **The Walkmen** - By far my favorite band to come out of the
+  Post Punk revival, they would rapidly transcend that genre and make amazing
+  records like this. I love the warm textured sounds, and the over the top
+  belting. I saw these guys twice on this tour. If I could go back in time
+  to see any band, I would see the Walkmen at this point in their history.
+  [*Memory*: I remember sitting in my tiny Rochester apartment as December 2009
+  became January 2010 listening to the song "In the New Year". I hatched a plan
+  to make a list of my favorite records from the closing decade. I never did
+  that properly, but it started the larger project this site represents.]
+
+- *Women* by **Women** - Angular, chaotic post-punk. They almost seem like the
+  only band to follow on from **Wire's** late 70s trilogy. They even through in
+  a slick pop song in "Black Rice". Stellar stuff, I wish they were able to make
+  more than the two albums they left us. [*Memory*: This album was a complete
+  impulse buy that I threw in on a vinyl order from the Simply Canadian website.
+  I was intimidated by it at first, but the format made me stick with it, and
+  I'm glad I did, wow!]
+
+- *Insurgentes* by **Steven Wilson** - Looking back now, his first solo record
+  was the biggest deviation from the **Porcupine Tree** sound. It is hard to put
+  a finger on exactly what is different, but this is clearly more a product of a
+  single person working alone. I think his music has been well served by the
+  changes, and alone his music has been more consistent than his band ever was.
+  "Significant Other" with its layered ethereal vocals and creepy toy piano is
+  probably still my favorite thing from his solo era. [*Memory*: I remember at
+  the time reflecting on how this was the last vestiges of my musical past, with
+  indie my clear future.]
+
 2009
 ----
 
