--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -34,6 +34,72 @@ TBD
 
 TBD
 
+2007
+----
+
+I had a sense that when I got to this year, I would have a bit to say in the
+introduction text, but didn't anticipate all the topics that would come to mind.
+This was a pivotal year for the music industry, and for me as a listener. These
+two things are not coincidental. The MP3 had almost a decade to destroy the model
+for pop music that had existed since the late 1960s, and at least initially,
+what was left in the ashes was wonderful. By 2007, portable media had made the
+MP3 a practical means for music consumption in almost all contexts. In
+mainstream music, the single was now again king, but album based rock music was
+somehow stronger than ever. Digital distribution had raised awareness of indie
+acts that in previous decades would have mostly toiled in obscurity and at best
+might have been the favorites of music nerds, and then only retrospectively
+discovered by listeners at large. In this era of music blogs, the obscure could
+rapidly become ubiquitous, and attention was getting drawn to increasingly
+diverse models of what rock music could be.
+
+The way I was consuming music was changing rapidly, but I clung to the old ways
+out of nostalgic stubbornness. Like most people my age I had accumulated a
+significant and very not-legit collection of MP3s. Around this time in my life,
+I started to assemble a legit recreation and expansion of these illicit files. I
+was using an expanded pallette of (legal) means to acquire and curate a rapidly
+growing collection. This was the golden age of the subscription/buffet pricing
+scheme at eMusic, who for a nominal fee (15-20 dollars a month) could provide a
+path to 10 or more indie label releases in digital format. At the time, I had
+started to buy my first digital albums from Amazon, but digital was eclipsed by
+CDs which were still the main way music was fining its way into my collection. I
+would visit City Lights records every Tuesday during my lunch break and leave
+with a clutch of the latest releases and likely a bunch of catalog titles I had
+special ordered. These were the crys of "the CD is dead" but I wasn't listening.
+I kept detailed records of every release that made it into my collection
+regardless of format and I know that the first album I bought (*Hissing Fauna,
+Are you the Destroyer?* by **Of Montreal**) was the 900th item cataloged. A full
+372 albums later, the 1272nd record (*Weirdo Rippers* by **No Age**) would be
+logged, surely the most music I have ever acquired in a single calendar year.
+
+Most of the music I was listening to was still from years gone by, but I was
+listening to more new music than I had ever done before. I have an interesting
+artifact from this time, the first comprehensive attempt I ever made at a best
+of the year list as a full grown adult. It isn't final version (unfortunately
+lost to time) but an in progress version that I sent to myself via E-mail. I
+remember working on this list during my lunch breaks at work during the last
+months of the year, and I was sending it home to complete there over the holiday
+break. At this point, I owned and could assess 79 different releases! I know
+what I considered to be my top 25 records at that time, and 20 of those still
+make my modern list. This is a much higher ratio than what would survive from my
+2009 favorites (see below), and I think this is a product of my ability to still
+listen with a kind of focus that the copious consumption facilitated by digital
+media would soon destroy.
+
+One of the five records that appeared on that original list of favorites that
+doesn't appear on my modern list feels like a case study in everything mentioned
+above. *In Rainbows* by **Radiohead** was the first "pay what you want", DRM
+free, digital release by a major, internationally famous rock band. Admittedly,
+they were a famous rock band that didn't much seem interested in being famous.
+At the time I have no doubt that I included it on my list because I thought that
+it was an important release, and 15 years later, I am convinced that it is one
+of the most important releases there has ever been. That said, it isn't a great
+album. Interestingly, as a band that became famous for working in the long form,
+it was mostly a miss as a long player. There are some killer singles on there
+though, and "Reckoner" is probably my favorite song of all from them, and one of
+the most beautiful rock songs ever made. It is hard to view this album separate
+from the context in which it was released, and I can't of a better way to
+summarize where pop music was in 2007 and my relationship with it.
+
 2008
 ----
 
