--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -44,7 +44,7 @@ old", but where exactly did it happen?
 
 *Section complete*: 7 Nov 2021
 
-*Latest update*: 16 June 2022
+*Latest update*: 8 Aug 2022
 
 *Total Albums*: 179
 
@@ -308,7 +308,7 @@ complicated. Eleven years later, here we are.
   picture, oops.]
 
 - *Love Remains* by **How to Dress Well** - In general I didn't love the weird
-  minimalist elecro-R&B stuff that Pitchfork was pushing back then. I do like
+  minimalist electro-R&B stuff that Pitchfork was pushing back then. I do like
   this though. [*Memory*: I saw them play some of the tracks off this record
   with a string quartet at Pitchfork 2011. I know there was a recording of this,
   I wish it was on Spotify, as it is the definitive recording of songs like
@@ -325,7 +325,7 @@ complicated. Eleven years later, here we are.
 - *The Longing* by **Kordan** - The best part of my short time writing for the
   music blog was getting access to lots of free music that bands would send in.
   This was the best record I found that way. A really interesting combination of
-  eletro-indie and classic guitar based goth, this is right up my alley. This
+  electro-indie and classic guitar based goth, this is right up my alley. This
   never really got any mainstream press. Makes me wonder how many other great
   records are out there and never find an audience. [*Memory*: I was so glad to
   find a note about this record in the album list I compiled at the end of 2010.
@@ -656,7 +656,14 @@ direct connections to that decade, but it all sure sounds like 2011.
   a memorable performance by this band early in my first evening club hopping
   with my press pass.]
 
-- *Floral Shoppe* by **McIntosh Plus** - This is the first album I'm writing
+- *Wits End* by **Cass McCombs** - Sounds like something out of the 70s. Somber
+  songwriter music, with some really interesting light psych elements.
+  [*Memory*: I have a weird relationship with this record, as I continually
+  forget how much I like it. I even forgot to add it to this writeup/picture,
+  even though it made it through the initial filtering process and is clearly in
+  my notes.]
+
+- *Floral Shoppe* by **Mcintosh Plus** - This is the first album I'm writing
   about that isn't on Spotify. That is because this is illegal music. I didn't
   realize that vaporwave was happening until it was mostly over. This is
   generally pointed to as the masterpiece of the genre, and I tend to agree. It
@@ -693,7 +700,7 @@ direct connections to that decade, but it all sure sounds like 2011.
   that anyone does it better than Shara Nova (formerly Worden). On this album
   she goes all the way and uses a classical chamber music ensemble as a backing
   band (yMusic, more on them later). [*Memory*: I saw Shara live four times on
-  this album cycle, imediately before and after release at Bugjar, and twice
+  this album cycle, immediately before and after release at Bugjar, and twice
   with yMusic at Music Now 2011 and Crossing Brooklyn Ferry 2012]
 
 - *Awake* by **Now Ensemble** - Straight up contemporary classical that manages
@@ -767,7 +774,7 @@ direct connections to that decade, but it all sure sounds like 2011.
   artists more on the pop side of things, but the results are very much "new
   music" for chamber ensemble. If only Sufjan could have participated, and this
   would feel like a complete statement. [*Memory*: I supported the Kickstarter
-  to take this album the final mile and recieved a signed CD for my trouble. It
+  to take this album the final mile and received a signed CD for my trouble. It
   has signatures from the ensemble and notable figures like Ryan Lott, Annie
   Clark, and Shara Worden. It is the perfect keepsake for a moment in musical
   history.]
@@ -783,7 +790,7 @@ direct connections to that decade, but it all sure sounds like 2011.
 
 - *Conatus* by **Zola Jesus** - Goth is one of my favorite historical music
   genres, but I hate most of the new stuff in that area. This is one of the
-  exceptions. She has made a stunning atmospheric, elecro-goth record here, with
+  exceptions. She has made a stunning atmospheric, electro-goth record here, with
   some top notch vocals. Maybe the closest anyone else has come to the **Dead
   Can Dance** mood. [*Memory*: I've always had a tenuous relationship with the
   Pitchfork scene, but I discovered this record reading their top albums of 2011
@@ -823,7 +830,7 @@ am savoring the process of revisiting the past.
   ever will.]
 
 - *Mature Themes* by **Ariel Pink's Haunted Graffiti** - This record was a big
-  step up in production quality for this band. They survive the less lowfi
+  step up in production quality for this band. They survive the less low-fi
   conditions and find a new warmth in the process. Some seriously weird music
   with totally non-serious childlike themes. Extraordinary stuff. [*Memory*:
   Hearing "Symphony of the Nymph" for the first time on a car ride at night, the
@@ -1569,7 +1576,7 @@ comprised of artists from the early century indie boom that I had been following
   probably are now not getting nearly enough credit. Chief among them is Sleigh
   Bells, who have turned their semi-obnoxious combination of electronics, guitar
   riffs, and belting into art rock gold. "Rainmaker" might be the best ever
-  invocation of the "Ashely's Roachclip" break, and that is saying something.
+  invocation of the "Ashley's Roachclip" break, and that is saying something.
   [*Memory*:  This was the record that made me go back and really realize the
   amazing body of work these guys have created]
 
@@ -1579,7 +1586,7 @@ comprised of artists from the early century indie boom that I had been following
   feels way different. I'm fairly certain that Sufjan pretty much wrapped this
   one up on his own because in the end we got something very much in line with
   *the BQE* and *Age of Adz*. I'm really pleased that the weirdest form of
-  electo-Sufjan got one last time to shine. [*Memory*: I wish I could hear how
+  electro-Sufjan got one last time to shine. [*Memory*: I wish I could hear how
   that performance back in 2012 really sounded, because I can't related it to
   what is recorded here]
 
@@ -1678,8 +1685,8 @@ a bit out of touch with popular music.
   disappointing from an artist who seems to transcend that kind of thing.
   Eventually I was able to find the things that make Monae one of my favorites,
   and I can appreciate this for what it is: a way above average implementation
-  of 21st century pop idioms. [*Memory*: Intially feeling collosially
-  disappointed by the incusion of modern pop into the work of an artist that had
+  of 21st century pop idioms. [*Memory*: Initially feeling colossally
+  disappointed by the inclusion of modern pop into the work of an artist that had
   until now, done a great job sounding timeless]
 
 - *Soil* by **serpentwithfeet** - NPR discovery 1 of 2. I love when the sounds of
@@ -1766,3 +1773,212 @@ thinking about the project I am working on here.
   not an album. This is how little music I've heard from 2019, that I need to
   count this. [*Memory*: Hearing this on Spotify recommendation radio and
   immediately loving it]
+
+Footnotes
+---------
+
+**Songs from Albums that Didn't Make my Lists**
+
+I listened to a ton of music. Much this was great, even if the album it came
+from wasn't a favorite. Also, the rise of streaming had given elevated
+importance to singles again. As I mentioned earlier, my favorite song of the
+decade *In Kind* by **Braids**, was an amazing single that got put on a sub-par
+record. Here is an unordered, list of other songs that I really like
+that are not contained within the albums listed above:
+
+- "Genghis Khan" by **Miike Snow** - Soundtrack to the last days of AltSpace (actually not)
+
+- "Ancient Ways" by **Interpol** - Saw them at Royal Albert hall soon after this
+
+- "Face for Today" by **Duran Duran** - Out of nowhere back to pop relevance
+
+- "Uncle ACE" by **Blood Orange** - Love that sax part at the end
+
+- "Keep Your Lips Sealed" by **The Do** - France's answer to **Sleigh Bells**
+
+- "Shell Games" by **Bright Eyes** - Last song I love by this guy
+
+- "Rivers and Roads" by **The Head and the Heart** - Why can't they have more
+  like this?
+
+- "Bizness" by **Tune-Yards** - I can't take her music in long doses, but this
+  is great.
+
+- "December" by **The Constellations** - Thanks to WITR I know about this weird song
+
+- "Adult Goth" by **Gang Gang Dance** - Saw these guys at Pitchfork and they had
+  a comical, new agey performance style straight out of the 90s
+
+- "Midnight City" by **M83** - "The City is my Church!, bb" - RIP Hipster Runoff
+
+- "Polish Girl" by **Neon Indian** - I much prefer the first album, but a great single
+
+- "Cheerleader" by **St. Vincent** - The last song of her's that I love
+
+- "We Are Young" by **Fun** - Yeah this is pop trash, but it is great pop trash
+
+- "Smile (Pictures or It Didn't Happen)" by **Amanda Palmer** - Terrible person,
+  great song
+
+- "Live" by **Ultravox** - What an amazing song for these guys to end an amazing
+  career on
+
+- "Spiteful Intervention" by **Of Montreal** - The last song I love by this guy
+
+- "Past Life" by **Lost in the Trees** - The smoother sound of this record
+  didn't really work, except on this one
+
+- "Sears Roebuck M&Ms" by **Ava Luna** - Another nutty, but extremely catchy
+  song from a band that is completely off the map
+
+- "Fall in Love" by **Phantogram** - Electro-pop masterpiece that they have
+  never quite been able to reproduce
+
+- "Front of the Line" by **Magik*Magik** - I only know about this woman because
+  of her orchestral performances at noise pop, but glad I could hear this gem
+
+- "Fireworks" by **Mitski** - By far my favorite song from the first three
+  of her records
+
+- "The Lung" by **Hiatus Kaiyote** - Thanks Spotify radio!
+
+- "Laura" by **Bat for Lashes** - Such a powerful song, and I wish she would do
+  simpler arrangements like this more often
+
+- "Paper Love" by **Allie X** - Apparently the Canadian answer to Lorde, I know little else
+
+- "Scared Money" by **NxWorries** - The kind of Chillwave/R&B mix that I wish we
+  had more of
+
+- "Abducted" by **Cults** - I remember the aura around these guys at NxNE 2011
+  as the next big thing, but they leave behind this amazing track and "Go Outside"
+
+- "Pizza Pasta" by **Night Manager** - Absolutely stunning, like everyone of the
+  two dozen or so songs they leave behind
+
+- "Shut You Down" by **Caveman** - Probably my favorite band from this time to
+  never produce a great record, but this song is amazing
+
+- "So Good at Being in Trouble" by **Unknown Mortal Orchestra** - They were
+  mostly a singles band for me, including this one
+
+- "Disparate Youth" by **Santigold** - One of the last songs I remember
+  discovering from a commercial (for some sort of car)
+
+- "Black Diamond I/II" by **Ava Luna** - A nutty combination of soul,
+  traditional indie, and **Nine Inch Nails**?!
+
+**Exploring the Past**
+
+This was definitely the decade of my life when I was most engaged with the new,
+but I still found some important pop music from the past. Here are the most
+important ones:
+
+- **The Divine Comedy** - One of my favorite new bands **Zambri** covered their
+  classic song "Tonight we Fly" which got me very interested in their 90s work.
+  Progressively I worked forward and now consider everyone one of their albums
+  to be among my favorites, including four from this very decade.
+
+- **Scott Walker** - Then **Divine Comedy** got me into this guy, one of their
+  primary influences. His first four, self titled solo records became a big time
+  favorite. Not surprising considering how much he has influenced my favorite
+  artists of today and the past.
+
+- **Chicago** - I have pretty much always liked these guys thanks to my older
+  brothers. However, I typically drew a line between the records of the late 60s
+  and early 70s (undisputed classics), an the late 70s and 80s stuff (at best a
+  guilty pleasure). I learned to love most of it, even the cheesy David Foster
+  produced stuff.
+
+- **Kate Bush** - When I was in college, I gave *Hounds of Love* a try since it
+  was regarded as a classic, and she is so linked to my all time favorite of
+  **Tori Amos**. What I didn't realize is that I like her first four records way
+  more. Thanks to Spotify radio, I now know this to be true. It played me
+  "Wuthering Heights" and I discovered on through there, including what would
+  become one of my all-time favorites, *Dreaming*.
+
+- **The Beach Boys** - I knew about **Pet Sounds**, and I had some fun with the
+  surf songs that came before, but I didn't fully appreciate their late 60s and
+  early 70s records. That would change in the early years of the 2010s when I
+  would become obsessed with records like *Wild Honey*, *Sunflower*, and *Surfs
+  Up*. The whole thing would climax with the release of the *Smile Sessions* boxet.
+
+**Classical Music** 
+
+I became an avid listener of WXXI Classical 91.5, and we are
+very fortunate to have a classical station of this quality. I also went to
+several dozen performances by our local orchestra and various chamber
+ensembles. My biggest discoveries were:
+
+- **Phillip Glass** - Who I went from knowing zero about, to consider one of my
+  all time favorites. I saw a full performance of *Einstein on the Beach* in 2013
+  and saw the composer perform some of his chamber music with **Eighth Blackbird**
+  at MusicNow in 2012. I acquired and consumed a lot of his stuff, some of which
+  will show up in my 70s and 80s lists.
+
+- *The Glagolitic Mass* by **Leos Janacek** - Everything I like about my
+  favorite composer, just a whole lot more of it. Plus a wild organ solo. I
+  started out with the Kubelek recording, but settled on Sir Simon Rattle.
+
+- *The Unanswered Question* by **Charles Ives** - Wonderfully creepy, and yet
+  very beautiful. The story of struggling through life, summarized in a tiny
+  little program piece. Greatest "20th century shorty" to start of an orchestra
+  concert ever.
+
+- *Symphony No. 2* by **Alan Hovhaness** - It is hard to imagine modern film
+  music would be the same without this stunner. Such a warm, exciting piece of
+  music. The Reiner/CSO recording is so definitive I feel like modern
+  performances try to imitate it.
+
+- *Syphony in D Minor* by **Cesar Franck** - An interesting symphony from the
+  early 20th century that seems to anticipate minimalism with a unusually (for
+  the time) repetitious form and gets its interest from variations of intensity
+  and instrumentation. I've seen this performed live an unusual number of times
+  and it has really sunk in.
+
+- *War Requiem* by **Benjamin Britten** - I somehow have seen this monster
+  performed twice (Both times with forces gathered up by the Eastman Music
+  School for special performances) and a recording will never fully do it
+  justice. A stunning, humongous work.
+
+As mentioned above, some of my favorites from the decade were part of the so
+called "indie classical" genre, or were outright classical releases that I felt
+like I could include for some reason. That said, there are some pure classical
+albums that I really enjoyed as well:
+
+- *Recomposed: Vivaldi, The Four Seasons* by **Max Richter** - It is quite
+  remarkable how he took music that I find quite boring and turned it into a
+  favorite. He keeps the pretty parts, ditches the stuff that hasn't aged well
+  and brings it all into the current age in a way that I really dig. [*Memory*:
+  Around this time I was often streaming audio or video from WQXR of new
+  performances arranged by their Q2 sub-channel. For a brief moment,
+  contemporary classical felt so hip. They video-cast a great performance of
+  this by the recomposer and soloist.]
+
+- *Charles Ives: Four Sonatas* by **Hilary Hawn and Valentina Lisitsa** - Ives
+  sensibilities work well in this intimate form. Love the way things shift back
+  and forth from folk fiddle to 20th century weirdness. [*Memory*: I'm not sure
+  how I found out about Hilary Hawn, but her punk-nerd image really makes me
+  feel like this kind of music is for me.]
+
+- *Processions* by **Daniel Bjarnason** - This is probably the most
+  representative record I can point to for what folks were trying to label
+  "indie classical". Music that wanted to build onto the established modern
+  sounds to make something that had appeal to the masses. Something that dare I
+  say might be described as "hip". [*Memory*: This makes me really miss Q2, they
+  played this all the time.]
+
+- *Song from the Uproar* by **Missy Mazzoli** - This built straight upon the
+  first **Victoire** record to tell a story through Opera. Why does it get
+  listed here, and not above, who knows? [*Memory*: I really regret not
+  traveling to New York to see this performed. I always assumed this kind of
+  thing would keep getting made. I didn't realize how brief this moment would
+  last.]
+
+- *Place* by **Build** - Not only was classical merging with rock, it was right
+  up against the boundaries of jazz again. This is an outstanding classical
+  fusion record? [*Memory*: Around this time I was checking out every new
+  release by New Amsterdam records, and found a ton of great stuff. Shortly
+  thereafter they pulled their music from Spotify, and it really impacted how
+  closely I follow the label. Nothing illustrates better how fragile things have
+  become in the streaming age.]
